[package]
name = "secure-vault"
version = "0.1.0"
edition = "2021"
description = "Sistema de Vault Seguro para Solana con validaciones multicapa"
authors = ["Claudio Santiago Condor Diestra"]
license = "MIT"
repository = "https://github.com/conquerblocks/secure-vault"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Solana Program Library
solana-program = "1.16"

# Serialización
borsh = "0.10"
borsh-derive = "0.10"

# Manejo de errores
thiserror = "1.0"

# Utilidades
arrayref = "0.3"
num-derive = "0.3"
num-traits = "0.2"

# Criptografía
sha2 = "0.10"
ed25519-dalek = "1.0"

# Tiempo y fechas
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"

# Serialización JSON (para reportes)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Compresión (opcional)
flate2 = { version = "1.0", optional = true }

[dev-dependencies]
# Testing
solana-program-test = "1.16"
solana-sdk = "1.16"
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
# Habilitar compresión de datos
compression = ["flate2"]
# Habilitar funciones de testing
test-utils = []
# Habilitar logging detallado
verbose-logging = []

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1 